--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>br.com.fiap.postech</groupId>
-  <artifactId>fastfood</artifactId>
+  <artifactId>tech-challenge-client</artifactId>
   <version>0.1.0</version>
   <name>client</name>
   <description>Tech challenge for FIAP Postech</description>
