--- a/kubernetes/2-tech-challenge-postgres-config-map.yaml
+++ b/kubernetes/2-tech-challenge-postgres-config-map.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: tech-challenge-namespace
 data:
   postgres-server: "tech-challenge.caxagz6v59r4.us-east-1.rds.amazonaws.com"
-  postgres-database-name: "techchallengedb"
+  postgres-database-name: "techchallengedbclient"
   postgres-user-username: "techchallengeuser"
   postgres-user-password: "techchallengepassword"
   postgres-port: "5432"
