--- a/kubernetes/5-tech-challenge-deployment.yaml
+++ b/kubernetes/5-tech-challenge-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: 653185900972.dkr.ecr.us-east-1.amazonaws.com/tech-challenge:latest
+          image: 653185900972.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-client:latest
           ports:
             - containerPort: 8080
           livenessProbe:
