--- a/kubernetes/2-tech-challenge-postgres-config-map.yaml
+++ b/kubernetes/2-tech-challenge-postgres-config-map.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-config-map
+  name: postgres-order-config-map
   namespace: tech-challenge-namespace
 data:
-  postgres-server: "tech-challenge-client.caxagz6v59r4.us-east-1.rds.amazonaws.com"
-  postgres-database-name: "techchallengedbclient"
-  postgres-user-username: "techchallengeuser"
-  postgres-user-password: "techchallengepassword"
-  postgres-port: "5432"
+  postgres-client-server: "tech-challenge-client.caxagz6v59r4.us-east-1.rds.amazonaws.com"
+  postgres-client-database-name: "techchallengedbclient"
+  postgres-client-user-username: "techchallengeuser"
+  postgres-client-user-password: "techchallengepassword"
+  postgres-client-port: "5432"
