--- a/kubernetes/5-tech-challenge-deployment.yaml
+++ b/kubernetes/5-tech-challenge-deployment.yaml
@@ -54,7 +54,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: tech-challenge-alb
+  name: tech-challenge-client-alb
   namespace: tech-challenge-namespace
 spec:
   selector:
