--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
       <artifactId>spring-cloud-starter-openfeign</artifactId>
       <version>4.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-kubernetes-client-all</artifactId>
+      <version>3.1.0</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.postgresql</groupId>
