--- a/kubernetes/4-tech-challenge-metrics.yaml
+++ b/kubernetes/4-tech-challenge-metrics.yaml
@@ -2,19 +2,19 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: metrics-server
-  namespace: kube-system
+    k8s-app: metrics-server-client
+  name: metrics-server-client
+  namespace: tech-challenge-namespace
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    k8s-app: metrics-server
+    k8s-app: metrics-server-client
     rbac.authorization.k8s.io/aggregate-to-admin: "true"
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
     rbac.authorization.k8s.io/aggregate-to-view: "true"
-  name: system:aggregated-metrics-reader
+  name: system:aggregated-metrics-reader-client
 rules:
   - apiGroups:
       - metrics.k8s.io
@@ -30,8 +30,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: system:metrics-server
+    k8s-app: metrics-server-client
+  name: system:metrics-server-client
 rules:
   - apiGroups:
       - ""
@@ -50,55 +50,55 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: metrics-server-auth-reader
-  namespace: kube-system
+    k8s-app: metrics-server-client
+  name: metrics-server-auth-reader-client
+  namespace: tech-challenge-namespace
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: extension-apiserver-authentication-reader
 subjects:
   - kind: ServiceAccount
-    name: metrics-server
-    namespace: kube-system
+    name: metrics-server-client
+    namespace: tech-challenge-namespace
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: metrics-server:system:auth-delegator
+    k8s-app: metrics-server-client
+  name: metrics-server-client:system:auth-delegator
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: system:auth-delegator
 subjects:
   - kind: ServiceAccount
-    name: metrics-server
-    namespace: kube-system
+    name: metrics-server-client
+    namespace: tech-challenge-namespace
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: system:metrics-server
+    k8s-app: metrics-server-client
+  name: system:metrics-server-client
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:metrics-server
+  name: system:metrics-server-client
 subjects:
   - kind: ServiceAccount
-    name: metrics-server
-    namespace: kube-system
+    name: metrics-server-client
+    namespace: tech-challenge-namespace
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: metrics-server
-  namespace: kube-system
+    k8s-app: metrics-server-client
+  name: metrics-server-client
+  namespace: tech-challenge-namespace
 spec:
   ports:
     - name: https
@@ -106,26 +106,26 @@ spec:
       protocol: TCP
       targetPort: https
   selector:
-    k8s-app: metrics-server
+    k8s-app: metrics-server-client
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    k8s-app: metrics-server
-  name: metrics-server
-  namespace: kube-system
+    k8s-app: metrics-server-client
+  name: metrics-server-client
+  namespace: tech-challenge-namespace
 spec:
   selector:
     matchLabels:
-      k8s-app: metrics-server
+      k8s-app: metrics-server-client
   strategy:
     rollingUpdate:
       maxUnavailable: 0
   template:
     metadata:
       labels:
-        k8s-app: metrics-server
+        k8s-app: metrics-server-client
     spec:
       containers:
         - args:
@@ -143,7 +143,7 @@ spec:
               port: https
               scheme: HTTPS
             periodSeconds: 10
-          name: metrics-server
+          name: metrics-server-client
           ports:
             - containerPort: 4443
               name: https
@@ -165,7 +165,7 @@ spec:
       nodeSelector:
         kubernetes.io/os: linux
       priorityClassName: system-cluster-critical
-      serviceAccountName: metrics-server
+      serviceAccountName: metrics-server-client
       volumes:
         - emptyDir: {}
           name: tmp-dir
@@ -174,14 +174,14 @@ apiVersion: apiregistration.k8s.io/v1
 kind: APIService
 metadata:
   labels:
-    k8s-app: metrics-server
+    k8s-app: metrics-server-client
   name: v1beta1.metrics.k8s.io
 spec:
   group: metrics.k8s.io
   groupPriorityMinimum: 100
   insecureSkipTLSVerify: true
   service:
-    name: metrics-server
-    namespace: kube-system
+    name: metrics-server-client
+    namespace: tech-challenge-namespace
   version: v1beta1
   versionPriority: 100
