--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,9 +28,10 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
 
-
   cloud:
     kubernetes:
+      client:
+        namespace: tech-challenge-namespace
       reload:
         enabled: true
       discovery:
