--- a/kubernetes/4-tech-challenge-metrics.yaml
+++ b/kubernetes/4-tech-challenge-metrics.yaml
@@ -64,9 +64,17 @@ rules:
   - apiGroups:
       - ""
     resources:
+      - pods
+      - nodes
+      - nodes/stats
+      - namespaces
+      - configmaps
       - services
+      - endpoints
     verbs:
+      - get
       - list
+      - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
