--- a/pom.xml
+++ b/pom.xml
@@ -98,12 +98,11 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
-      <version>4.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-kubernetes-client-all</artifactId>
-      <version>3.1.0</version>
+      <artifactId>spring-cloud-starter-kubernetes-all</artifactId>
+      <version>1.1.10.RELEASE</version>
     </dependency>
 
 
